ui-tests/tests/fail/type-error.rs
use mic::answer;

#[answer]
fn main() -> _ {
    vec![1, 2, 3]
}
