ui-tests/tests/fail/type-error.stderr
error[E0277]: `Vec<{integer}>` doesn't implement `std::fmt::Display`
 --> tests/fail/type-error.rs:3:1
  |
3 | #[answer]
  | ^^^^^^^^^ `Vec<{integer}>` cannot be formatted with the default formatter
  |
  = help: the trait `std::fmt::Display` is not implemented for `Vec<{integer}>`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
  = note: this error originates in the macro `$crate::format_args_nl` (in Nightly builds, run with -Z macro-backtrace for more info)
